# fork

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  install.ps1  install.sh  vercel.json
.github/workflows/: ci.yml  release.yml
boards/: esp32c3.toml  rp2040.toml  stm32f103.toml  stm32f405.toml
docker/: esp32c3.Dockerfile  rp2040.Dockerfile  stm32f405.Dockerfile
examples/rp2040-rp2040-hal/: Cargo.toml
examples/stm32f405-cortex-m/: Cargo.toml
examples/stm32f405-cortex-m/.cargo/: config.toml
examples/stm32f405-cortex-m/src/: buttons.rs  buzzer.rs  main.rs  player.rs
recipes/: esp32c6.toml  esp32s3.toml  mg24.toml  nrf52840.toml  ra4m1.toml  rp2040.toml  rp2350.toml  samd21.toml  stm32f103.toml  stm32f405.toml
scripts/: build-docs.sh  release.sh
tests/e2e/: Cargo.toml
tests/e2e/tests/: e2e.rs
