[workspace]
members = [
    "packages/core",
    "packages/cli",
    "packages/recipes",
    "packages/mdbook-boards",
    "tests/e2e",
]

exclude = [
    "examples/*",
]


resolver = "2"

[workspace.package]
version = "0.1.2"
edition = "2024"
description = "Container orchestration for firmware"
license = "MIT"
repository = "https://github.com/TareqRafed/fork"
homepage = "https://github.com/TareqRafed/fork"
keywords = ["embedded", "firmware", "docker", "build", "toolchain"]
categories = ["command-line-utilities", "embedded", "development-tools"]
